syntax = "proto3";

message TagObjectUnion {
    message Numeric {
        double value = 1;
    }

    message Literal {
        string value = 1;
    }
}

message __Main {
    repeated Array.Element_lt__lp_TagObjectUnion.Literal_space__or__space_TagObjectUnion.Numeric_rp__gt_ value = 1;
}

message Array {
    message Element_lt__lp_TagObjectUnion {
        message Literal_space__or__space_TagObjectUnion {
            message Numeric_rp__gt_ {
                oneof value {
                    TagObjectUnion.Numeric value_o0 = 1;
                    TagObjectUnion.Literal value_o1 = 2;
                }
            }
        }
    }
}